# quart_minify

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg  setup.py  test_fm.py
quart_minify/: __init__.py  minify.py
tests/: test_fm.py
